# xtmcv

./: CMakeLists.txt  README.md  core.cpp  core.h  highgui.cpp  highgui_xtm.h  imgcodecs.cpp  imgcodecs.h  imgproc.cpp  imgproc.h  video.cpp  video.h  videoio.cpp  videoio.h
